syntax = "proto3";

package image.v1;

option go_package = "github.com/freer4an/image-storage/protos/gen";

import "google/protobuf/timestamp.proto";


message Image {
  string id = 1;
  string format = 2;
  int32 width = 3;
  int32 height = 4;
  string original_path = 5;
  string thumbnail_path = 6;
  google.protobuf.Timestamp uploaded_at = 7;
}
